dq python op torch ext works

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,9 @@ set(CMAKE_CUDA_STANDARD 17)
 
 
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build)
-set(SRC_LIST main.cc unpack_weight_k16.cu cpp_simulate.cc)
+set(SRC_LIST src/main.cc src/cu/unpack_weight_2_to_7.cu src/cpp_simulate.cc)
 #aux_source_directory(src SRC_LIST)
-include_directories(./)
+include_directories(./src)
 
 add_executable(${PROJECT_NAME} ${SRC_LIST})
 target_link_libraries(${PROJECT_NAME} cublas curand cuda)
